logs/ycyc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/tools'...
Compiling './lib/python3.5/site-packages/tools/analysis_dependency.py'...
***   File "./lib/python3.5/site-packages/tools/analysis_dependency.py", line 52
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tools/brain_hole_diff.py'...
***   File "./lib/python3.5/site-packages/tools/brain_hole_diff.py", line 40
    print diff("3*sin(x)-cos(x)") # 3*cos(x) + sin(x)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ycyc'...
Listing './lib/python3.5/site-packages/ycyc/base'...
Listing './lib/python3.5/site-packages/ycyc/contribs'...
Listing './lib/python3.5/site-packages/ycyc/debug'...
Listing './lib/python3.5/site-packages/ycyc/frameworks'...
Listing './lib/python3.5/site-packages/ycyc/frameworks/events'...
Listing './lib/python3.5/site-packages/ycyc/frameworks/spider'...
Listing './lib/python3.5/site-packages/ycyc/libs'...
Listing './lib/python3.5/site-packages/ycyc/libs/algorithms'...
Listing './lib/python3.5/site-packages/ycyc/libs/algorithms/hashlib'...
Listing './lib/python3.5/site-packages/ycyc/libs/algorithms/sequences'...
Listing './lib/python3.5/site-packages/ycyc/libs/mathutils'...
Listing './lib/python3.5/site-packages/ycyc/libs/process'...
Listing './lib/python3.5/site-packages/ycyc/libs/rediskit'...
Listing './lib/python3.5/site-packages/ycyc/libs/statelib'...
Listing './lib/python3.5/site-packages/ycyc/libs/task'...
Listing './lib/python3.5/site-packages/ycyc/libs/txtgen'...
Listing './lib/python3.5/site-packages/ycyc/shortcuts'...
Listing './lib/python3.5/site-packages/ycyc/tests'...
Listing './lib/python3.5/site-packages/ycyc/tests/base'...
Compiling './lib/python3.5/site-packages/ycyc/tests/base/test_calctools.py'...
***   File "./lib/python3.5/site-packages/ycyc/tests/base/test_calctools.py", line 55
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ycyc/tests/contribs'...
Listing './lib/python3.5/site-packages/ycyc/tests/debug'...
Listing './lib/python3.5/site-packages/ycyc/tests/shortcuts'...
Listing './lib/python3.5/site-packages/ycyc/tests/tools'...
Listing './lib/python3.5/site-packages/ycyc/tests/ycollections'...
Listing './lib/python3.5/site-packages/ycyc/tools'...
Listing './lib/python3.5/site-packages/ycyc/ycollections'...
Listing './lib/python3.5/site-packages/ycyc-0.1.11.8.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
